--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                         <p>STORE - worldwide fashion store since 1978. We sell over 1000+ branded products on our web-site.</p>
                         <a href="" class="link">www.company.com</a>
                         <div class="links">
-                            <a href=""><img src="img/Vector (1).png" alt=""></a>
-                            <a href=""><img src="img/Group 81.png" alt=""></a>
-                            <a href=""><img src="img/Vector (2).png" alt=""></a>
-                            <a href=""><img src="img/Group 82.png" alt=""></a>
-                            <a href=""><img src="img/Group 80.png" alt=""></a>
+                            <a href="" class="link-logos"><img src="img/Vector (1).png" alt=""></a>
+                            <a href="" class="link-logos"><img src="img/Group 81.png" alt=""></a>
+                            <a href="" class="link-logos"><img src="img/Vector (2).png" alt=""></a>
+                            <a href="" class="link-logos"><img src="img/Group 82.png" alt=""></a>
+                            <a href="" class="link-logos"><img src="img/Group 80.png" alt=""></a>
                         </div>
                     </div>
 
